--- a/pdrApp/app/src/main/res/values/strings.xml
+++ b/pdrApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Вчимо ПДР разом!</string>
     <string name="Hello">Привіт, Вчимо ПДР разом!</string>
+    <string name="Start">До тестів</string>
+    <string name="btnInfo">ПДР інформація</string>
 </resources>
