--- a/pdrApp/app/src/main/res/values/strings.xml
+++ b/pdrApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="level4">Змішані</string>
     <string name="pdrInfo">Правила дорожнього руху 2021</string>
     <string name="info1">Більше</string>
+    <string name="level">Рівень :</string>
 </resources>
